# decorp_bot

./: Cargo.toml  Dockerfile  update.sh
.github/workflows/: build.yml
src/: bot.rs  interval.rs  main.rs  scrapper.rs  utils.rs
