cargo-features = ["edition2021"]

[package]
name = "decorp_bot"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
headless_chrome = { git = "https://github.com/piratehacker/rust-headless-chrome", rev = "7d808778ce10c958e11c5e910285f6cea948b01f" }
anyhow = "1.0"
text_io = "0.1.10"
serde = "1.0.136"
failure = "0.1.8"
toml = "0.5.8"
proc-macro2 = "1.0.36"
regex = "1.5.5"
atoi = "1.0.0"
serde_json = "1.0.79"
serenity = { version = "0.10.10", default-features = false, features = ["client", "gateway", "cache", "rustls_backend", "model", "standard_framework", "collector"] }
tokio = { version = "1.17.0", features = ["full"] }
async-trait = "0.1.52"
reqwest = { version = "0.11.10", features = [ "cookies" ] }
cookie = "0.16.0"
scraper = "0.13.0"
similar = "2.2.0"
envy = "0.4"